--- a/hedges-bridges/package.json
+++ b/hedges-bridges/package.json
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "@formspree/react": "^2.5.1",
+    "@mantine/core": "^5.10.5",
+    "@mantine/hooks": "^5.10.5",
+    "@mantine/rte": "^5.10.5",
     "framer-motion": "^11.11.9",
+    "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-quill": "^0.0.2",
     "react-router-dom": "^6.26.2",
     "react-swipeable": "^7.0.2"
   },
